SWATCH-1575 extra: Fix solution